--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Carol's Portal</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World! this is suuuper cool</h1>
 </body>
 </html>
