--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -21,7 +21,7 @@
             var spell = prompt('type this is a spell');
         } if(spell === 'this is a spell'){
             newspell = spell.replace('this is a spell', 'siht si a lleps') 
-        } if(spell !== 'this is a spell'){
+        } if(spell !=== 'this is a spell'){
             console.log('wrong!');
         }
 
