--- a/index.html
+++ b/index.html
@@ -3,9 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol's Portal</title>
+    <title>Carol's Portal Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+
+<!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rye&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Actor&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello World! this is suuuper cool</h1>
+    <header>
+        <h2>DES157A: INTERACTIVE MEDIA - WQ26</h2>
+        <h1>PORTAL TO . . .</h1>
+        <h2>DESIGNED BY: CAROL NGUYEN</h2>
+    </header>
+
+    <main>
+        <article>
+            <h3>RESEARCH</h3>
+
+            <div>
+                <p>Learning Journal</p>
+                <p>Experiment 1</p>
+                <p>Experiment 2</p>
+            </div>
+        </article>
+
+        <article>
+            <h3>MAD LIBS</h3>
+
+            <div>
+                <p class="ml">Design V1</p>
+                <p class="ml">Code V2</p>
+                <p class="ml">Final Mad Libs</p>
+                <p class="ml">Improvements</p>
+            </div>
+        </article>
+
+        <article>
+            <h3 class=>EVERY PICTURE</h3>
+
+            <div>
+                <p class="pic">Experimentation</p>
+                <p class="pic">Design Comp</p>
+                <p class="pic">Code V1</p>
+                <p class="pic">Final Every Picture</p>
+                <p class="pic">Improvements</p>
+            </div>
+
+        </article>
+
+        <article>
+            <h3>GAME ON!</h3>
+
+            <div>
+                <p class="gdv1">Design V1</p>
+
+                <p class="gcv1">Code V1</p>
+
+                <p class="finalg">Final Game</p>
+            </div>
+
+        </article>
+    </main>
+
+    <footer>
+        <address>
+           Carol Nguyen - Email: <a href="mailto:&#109;&#111;&#115;&#110;&#103;&#117;&#121;&#101;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Mosnguyen@ucdavis.edu</a>
+        </address>
+    </footer>
 </body>
+
 </html>
