--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
             <div>
                 <p>Learning Journal</p>
-                <p>Experiment 1</p>
+                <!-- <p>Experiment 1</p> -->
+                 <a href="exp/exp1.html">Experiment 1</a>
                 <p>Experiment 2</p>
             </div>
         </article>
