--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>
                 <p>Learning Journal</p>
                 <!-- <p>Experiment 1</p> -->
-                 <a href="exp/exp1.html">Experiment 1</a>
+                 <p><a href="exp/exp1.html">Experiment 1</a></p>
                 <p>Experiment 2</p>
             </div>
         </article>
