--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
 
-    <link href="/styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
 </head>
 <body>
 
