--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -23,7 +23,7 @@
         <h2>To open console: Command + Option + J </h2>
     </header>
 
-    <img src="/images/zee.png" alt="doodle of zatanna" width="300" length="377">
+    <img src="../images/zee.png" alt="doodle of zatanna" width="300" length="377">
 
     <script>
 
