--- a/des157a/index.html
+++ b/des157a/index.html
@@ -43,6 +43,7 @@
 
             <div>
                 <p class="ml">Design V1</p>
+                <p><a href="madlibs/index.html">Design V1</a></p>
                 <p class="ml">Code V2</p>
                 <p class="ml">Final Mad Libs</p>
                 <p class="ml">Improvements</p>
