--- a/index.html
+++ b/index.html
@@ -4,83 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol's Portal Page</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
-<!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rye&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Actor&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-
-    <link href="styles.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"> 
 </head>
 
 <body>
     <header>
-        <h2>DES157A: INTERACTIVE MEDIA - WQ26</h2>
-        <h1>PORTAL TO . . .</h1>
-        <h2>DESIGNED BY: CAROL NGUYEN</h2>
+        <h1>Carol's Portal To...</h1>
+
+        <h2>DES157A - INTERACTIVE MEDIA II - WINTER 2026</h2>
+
+        <img class="maglass" src="Images/maglass.png" alt="drawing of a magnifying glass">
+
     </header>
 
     <main>
-        <article>
-            <h3>RESEARCH</h3>
+        <div>
+            <h3>Research</h3>
 
-            <div>
-                <p>Learning Journal</p>
-                <!-- <p>Experiment 1</p> -->
-                 <p><a href="exp/exp1.html">Experiment 1</a></p>
-                <p>Experiment 2</p>
-            </div>
-        </article>
+            <ul>
+                <li>
+                    <a href="#">Learning Journal</a>
+                </li>
+                <li>
+                    <a href="exp/exp1.html">Experiment 1</a>
+                </li>
+                <li>
+                    <a href="#">Experiment 2</a>
+                </li>
+            </ul>
+        </div>
 
-        <article>
-            <h3>MAD LIBS</h3>
+        <div>
+            <h3>MadLibs</h3>
 
-            <div>
-                <p><a href="madlibs/index.html">Design V1</a></p>
-                <p class="ml">Code V2</p>
-                <p class="ml">Final Mad Libs</p>
-                <p class="ml">Improvements</p>
-            </div>
-        </article>
+            <ul>
+                <li>
+                    <a href="/madlibs/index.html">Design V1</a>
+                </li>
+                <li>
+                    <a href="#">Code V1</a>
+                </li>
+                <li>
+                    <a href="#">Final MadLibs</a>
+                </li>
+                <li>
+                    <a href="#">Improvements</a>
+                </li>
+            </ul>
+        </div>
 
-        <article>
-            <h3 class=>EVERY PICTURE</h3>
+        <div>
+            <h3>Every Picture</h3>
 
-            <div>
-                <p class="pic">Experimentation</p>
-                <p class="pic">Design Comp</p>
-                <p class="pic">Code V1</p>
-                <p class="pic">Final Every Picture</p>
-                <p class="pic">Improvements</p>
-            </div>
+            <ul>
+                <li>
+                    <a href="#">Experimentation</a>
+                </li>
+                <li>
+                    <a href="#">Design Comp</a>
+                </li>
+                <li>
+                    <a href="#">Code V1</a>
+                </li>
+                <li>
+                    <a href="#">Final Every Picture</a>
+                </li>
+                <li>
+                    <a href="#">Improvements</a>
+                </li>
+            </ul>
+        </div>
 
-        </article>
+        <div>
+            <h3>Game On</h3>
 
-        <article>
-            <h3>GAME ON!</h3>
-
-            <div>
-                <p class="gdv1">Design V1</p>
-
-                <p class="gcv1">Code V1</p>
-
-                <p class="finalg">Final Game</p>
-            </div>
-
-        </article>
+            <ul>
+                <li>
+                    <a href="#">Design V1</a>
+                </li>
+                <li>
+                    <a href="#">Code V1</a>
+                </li>
+                <li>
+                    <a href="#">Final Game On</a>
+                </li>
+            </ul>
+        </div>
     </main>
 
     <footer>
-        <address>
-           Carol Nguyen - Email: <a href="mailto:&#109;&#111;&#115;&#110;&#103;&#117;&#121;&#101;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Mosnguyen@ucdavis.edu</a>
-        </address>
+        <p class="footer">DESIGNED BY CAROL NGUYEN | <a class ="footer" href="mailto:&#109;&#111;&#115;&#110;&#103;&#117;&#121;&#101;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">EMAIL: MOSNGUYEN@UCDAVIS.EDU</a> </p>
     </footer>
+
 </body>
 
 </html>
