--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="exp/exp1.html">Experiment 1</a>
                 </li>
                 <li>
-                    <a href="#">Experiment 2</a>
+                    <a href="exp/exp2.html">Experiment 2</a>
                 </li>
             </ul>
         </div>
