--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h2>DES157A - INTERACTIVE MEDIA II - WINTER 2026</h2>
 
-        <img class="maglass" src="Images/maglass.png" alt="drawing of a magnifying glass">
+        <img class="maglass" src="images/maglass.png" alt="drawing of a magnifying glass">
 
     </header>
 
